# connect-4

./: .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  build_debug.sh  conanfile.py
.devcontainer/: configure_conan.sh  devcontainer.json  prepare_env.sh
cmake/: CompilerFlags.cmake  DeployQt.cmake  Ipo.cmake
scripts/: build_linux.sh  build_windows.bat
scripts/inplace_vector_package/: conandata.yml  conanfile.py
src/: CMakeLists.txt
src/console-ui/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/game/: Board.h  Bot.h  Game.h
src/core/utilities/: int_types.h
src/gui/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test.cpp
tests/profiling/: CMakeLists.txt  main.cpp
tests/unittests/: CMakeLists.txt
